--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,17 +1,12 @@
 
-// Light Theme
+// Theme
 
 // Background
 $light_background : #dee4e7;
-
-// Text Colors
-$light_primary_text : #222;
-$primar-blue : #4fabf5;
-$primar-blue-hover : #2279c0;
-
-// Dark Theme
-
 $Dark_background : #222222;
 
 // Text Colors
-$dark_primary_text : #dee4e7;
+
+$primar-blue : #4fabf5;
+$primar-blue-hover : #2279c0;
+
