--- a/src/assets/custom/_todoContainer.scss
+++ b/src/assets/custom/_todoContainer.scss
@@ -9,21 +9,20 @@
     }
     .list-section {
         width: 100%;
-        margin: 10px 10px;
+        margin: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content:center;
-        overflow: scroll;
+        justify-content: center;
     }
 }
-.todo-add{
+
+// Todo Add Styling
+
+.todo-add {
     &-container {
-        padding: 10px 20px;
+        padding: 10px;
         width: 50%;
-        .label {
-            margin: 10px 0px;
-        }
     }
     &-input-field {
         display: flex;
@@ -33,43 +32,43 @@
             display: block;
             height: 30px;
             padding: 0px 10px;
+            outline: none;
         }
         .add-button {
             display: block;
             padding: 10px 20px;
-            margin: 0px 10px;
             background-color: $primar-blue;
             border-radius: 5px;
             border: none;
-            color: #fff;
+            color: white;
             cursor: pointer;
+            margin: 0px 10px;
             &:hover {
                 background-color: $primar-blue-hover;
             }
-
         }
     }
 }
 
+
+// Todo List Styling
 .todo-list {
     &-container {
-        width: 47%;
-        padding: 10px 15px;
+        width: 50%;
+        padding: 10px 12px;
         margin: 10px;
-        border-radius: 5px;
         display: flex;
         justify-content: space-between;
-        border: 1px solid #222 !important;
-        background-color: rgba(120, 141, 120, 0.5);
-        .input{
+        border: 1px solid #222;
+        .input {
             background-color: transparent;
             outline: none;
-            border:none;
+            border: none;
             border-bottom: 1px solid $primar-blue;
             width: 100%;
         }
     }
-    &-icons {
+    &-icons{
         display: flex;
         justify-content: space-around;
         width: 30%;
